Enhance stock data handling and improve dashboard stock views