@@ -1,236 +1,303 @@
 package com.stocksense.service;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 
 @Service
 public class AlphaVantageService {
 
-    @Value("${alphavantage.api.key:HXW27CL9C8V78EXL}")
+    @Value("${alphavantage.api.key}")
     private String apiKey;
 
     private final RestTemplate restTemplate = new RestTemplate();
-    private final ObjectMapper mapper = new ObjectMapper();
+
     private static final String BASE = "https://www.alphavantage.co/query";
 
-    @Cacheable(value = "stockQuote", key = "#symbol")
+    // ─────────────────────────────────────────────────────────────────────────
+    // The root cause of ALL 15 errors:
+    //   Map<?, ?> means key=capture<?>, value=capture<?>.
+    //   getOrDefault(Object key, V defaultValue) requires V = capture<?>,
+    //   but we were passing String as the default → type mismatch.
+    //
+    // Fix: replace every m.getOrDefault(key, "default") on a Map<?,?>
+    //      with the helper str(m, key, default) which does an explicit cast.
+    // ─────────────────────────────────────────────────────────────────────────
+
+    // ── Single real-time quote ────────────────────────────────────────────────
+
     public Map<String, Object> getQuote(String symbol) {
         try {
             String url = BASE + "?function=GLOBAL_QUOTE&symbol=" + symbol + "&apikey=" + apiKey;
-            String json = restTemplate.getForObject(url, String.class);
-            JsonNode root = mapper.readTree(json);
-            JsonNode q = root.path("Global Quote");
+            Map<?, ?> resp = restTemplate.getForObject(url, Map.class);
+            if (resp == null) return mockQuote(symbol);
+
+            Map<?, ?> quote = (Map<?, ?>) resp.get("Global Quote");
+            if (quote == null || quote.isEmpty()) return mockQuote(symbol);
+
             Map<String, Object> result = new LinkedHashMap<>();
-            result.put("symbol",           q.path("01. symbol").asText(symbol));
-            result.put("price",            parseDouble(q.path("05. price").asText("0")));
-            result.put("open",             parseDouble(q.path("02. open").asText("0")));
-            result.put("high",             parseDouble(q.path("03. high").asText("0")));
-            result.put("low",              parseDouble(q.path("04. low").asText("0")));
-            result.put("previousClose",    parseDouble(q.path("08. previous close").asText("0")));
-            result.put("change",           parseDouble(q.path("09. change").asText("0")));
-            result.put("changePercent",    parseDoublePercent(q.path("10. change percent").asText("0%")));
-            result.put("volume",           parseLong(q.path("06. volume").asText("0")));
-            result.put("latestTradingDay", q.path("07. latest trading day").asText(""));
-            result.put("analystBuy",  65);
-            result.put("analystHold", 25);
-            result.put("analystSell", 10);
+            result.put("symbol",        symbol);
+            result.put("price",         parseDouble(quote, "05. price"));
+            result.put("open",          parseDouble(quote, "02. open"));
+            result.put("high",          parseDouble(quote, "03. high"));
+            result.put("low",           parseDouble(quote, "04. low"));
+            result.put("change",        parseDouble(quote, "09. change"));
+            result.put("changePercent", parseChangePct(quote));
+            result.put("volume",        parseLong(quote,   "06. volume"));
+            result.put("latestDay",     str(quote, "07. latest trading day", ""));
             return result;
         } catch (Exception e) {
             return mockQuote(symbol);
         }
     }
 
-    // ── GET company overview (name, sector, market cap, P/E, EPS etc.) ────────
-    @Cacheable(value = "stockOverview", key = "#symbol")
+    // ── Company overview / fundamentals ───────────────────────────────────────
+
     public Map<String, Object> getOverview(String symbol) {
         try {
             String url = BASE + "?function=OVERVIEW&symbol=" + symbol + "&apikey=" + apiKey;
-            String json = restTemplate.getForObject(url, String.class);
-            JsonNode root = mapper.readTree(json);
-
-            // Rate limited or empty response
-            if (root.has("Note") || root.has("Information") || !root.has("Symbol")) {
+            Map<?, ?> resp = restTemplate.getForObject(url, Map.class);
+            if (resp == null || resp.isEmpty() || !resp.containsKey("Symbol")) {
                 return mockOverview(symbol);
             }
-
             Map<String, Object> result = new LinkedHashMap<>();
-            result.put("Symbol",               root.path("Symbol").asText(symbol));
-            result.put("Name",                 root.path("Name").asText(symbol));
-            result.put("Exchange",             root.path("Exchange").asText("—"));
-            result.put("Sector",               root.path("Sector").asText("—"));
-            result.put("Industry",             root.path("Industry").asText("—"));
-            result.put("Description",          root.path("Description").asText(""));
-            result.put("MarketCapitalization", root.path("MarketCapitalization").asText("0"));
-            result.put("PERatio",              root.path("PERatio").asText("0"));
-            result.put("EPS",                  root.path("EPS").asText("0"));
-            result.put("DividendYield",        root.path("DividendYield").asText("0"));
-            result.put("52WeekHigh",           root.path("52WeekHigh").asText("0"));
-            result.put("52WeekLow",            root.path("52WeekLow").asText("0"));
+            resp.forEach((k, v) -> result.put(String.valueOf(k), v));
             return result;
         } catch (Exception e) {
             return mockOverview(symbol);
         }
     }
 
-    @Cacheable(value = "stockHistory", key = "#symbol")
-    public Map<String, Object> getDailyHistory(String symbol) {
-        try {
-            String url = BASE + "?function=TIME_SERIES_DAILY&symbol=" + symbol
-                    + "&outputsize=compact&apikey=" + apiKey;
-            String json = restTemplate.getForObject(url, String.class);
-            JsonNode root = mapper.readTree(json);
-            JsonNode series = root.path("Time Series (Daily)");
-            List<Map<String, Object>> candles = new ArrayList<>();
-            Iterator<Map.Entry<String, JsonNode>> it = series.fields();
-            while (it.hasNext()) {
-                Map.Entry<String, JsonNode> entry = it.next();
-                JsonNode v = entry.getValue();
-                Map<String, Object> c = new LinkedHashMap<>();
-                c.put("date",   entry.getKey());
-                c.put("open",   parseDouble(v.path("1. open").asText("0")));
-                c.put("high",   parseDouble(v.path("2. high").asText("0")));
-                c.put("low",    parseDouble(v.path("3. low").asText("0")));
-                c.put("close",  parseDouble(v.path("4. close").asText("0")));
-                c.put("volume", parseLong(v.path("5. volume").asText("0")));
-                candles.add(c);
-            }
-            Collections.reverse(candles);
-            return Map.of("symbol", symbol, "candles", candles);
-        } catch (Exception e) {
-            return Map.of("symbol", symbol, "candles", mockCandles());
-        }
-    }
+    // ── Symbol search ─────────────────────────────────────────────────────────
 
     public List<Map<String, Object>> search(String query) {
         try {
-            String encoded = URLEncoder.encode(query, StandardCharsets.UTF_8);
-            String url = BASE + "?function=SYMBOL_SEARCH&keywords=" + encoded + "&apikey=" + apiKey;
+            String url = BASE + "?function=SYMBOL_SEARCH&keywords=" + query + "&apikey=" + apiKey;
+            Map<?, ?> resp = restTemplate.getForObject(url, Map.class);
+            if (resp == null) return Collections.emptyList();
 
-            System.out.println("=== SEARCH DEBUG ===");
-            System.out.println("Query   : " + query);
-            System.out.println("URL     : " + url);
+            List<?> matches = (List<?>) resp.get("bestMatches");
+            if (matches == null) return Collections.emptyList();
 
-            String json = restTemplate.getForObject(url, String.class);
-            System.out.println("Response: " + json);
-            System.out.println("====================");
-
-            JsonNode root = mapper.readTree(json);
-
-            if (root.has("Note") || root.has("Information")) {
-                System.out.println("RATE LIMITED by Alpha Vantage");
-                return List.of();
-            }
-
-            JsonNode matches = root.path("bestMatches");
             List<Map<String, Object>> results = new ArrayList<>();
-            for (JsonNode m : matches) {
+            for (Object m : matches) {
+                Map<?, ?> match = (Map<?, ?>) m;
                 Map<String, Object> item = new LinkedHashMap<>();
-                item.put("symbol",   m.path("1. symbol").asText());
-                item.put("name",     m.path("2. name").asText());
-                item.put("type",     m.path("3. type").asText());
-                item.put("region",   m.path("4. region").asText());
-                item.put("currency", m.path("8. currency").asText());
+                item.put("symbol", str(match, "1. symbol", ""));
+                item.put("name",   str(match, "2. name",   ""));
+                item.put("type",   str(match, "3. type",   ""));
+                item.put("region", str(match, "4. region", ""));
                 results.add(item);
             }
-
-            System.out.println("Results : " + results.size());
             return results;
-
         } catch (Exception e) {
-            System.out.println("SEARCH EXCEPTION: " + e.getClass().getName() + " — " + e.getMessage());
-            return List.of();
+            return Collections.emptyList();
         }
     }
 
-    @Cacheable(value = "batchQuotes", key = "#symbols.toString()")
+    // ── Batch quotes ──────────────────────────────────────────────────────────
+
     public List<Map<String, Object>> getBatchQuotes(List<String> symbols) {
         List<Map<String, Object>> results = new ArrayList<>();
         for (String symbol : symbols) {
-            results.add(getQuote(symbol));
-            try { Thread.sleep(200); } catch (InterruptedException ignored) {}
+            try {
+                results.add(getQuote(symbol));
+            } catch (Exception e) {
+                results.add(mockQuote(symbol));
+            }
         }
         return results;
     }
 
-    // ── Helpers ───────────────────────────────────────────────────────────────
+    // ── Intraday OHLCV — 5-min bars for 1D chart ─────────────────────────────
 
-    private double parseDouble(String s) {
-        try { return Double.parseDouble(s.trim()); } catch (Exception e) { return 0.0; }
+    public List<Map<String, Object>> getIntraday(String symbol, String interval) {
+        try {
+            String url = BASE
+                    + "?function=TIME_SERIES_INTRADAY"
+                    + "&symbol="    + symbol
+                    + "&interval="  + interval
+                    + "&outputsize=compact"
+                    + "&apikey="    + apiKey;
+
+            Map<?, ?> resp = restTemplate.getForObject(url, Map.class);
+            if (resp == null) return Collections.emptyList();
+
+            String seriesKey = "Time Series (" + interval + ")";
+            Map<?, ?> series = (Map<?, ?>) resp.get(seriesKey);
+            if (series == null || series.isEmpty()) return Collections.emptyList();
+
+            List<Map<String, Object>> candles = new ArrayList<>();
+            DateTimeFormatter fmt = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+
+            new TreeMap<>(series).forEach((dateStr, val) -> {
+                Map<?, ?> bar = (Map<?, ?>) val;
+                long time = LocalDateTime.parse(String.valueOf(dateStr), fmt)
+                        .toEpochSecond(ZoneOffset.ofHoursMinutes(5, 30));
+                Map<String, Object> candle = new LinkedHashMap<>();
+                candle.put("time",   time);
+                candle.put("open",   parseBarDouble(bar, "1. open"));
+                candle.put("high",   parseBarDouble(bar, "2. high"));
+                candle.put("low",    parseBarDouble(bar, "3. low"));
+                candle.put("close",  parseBarDouble(bar, "4. close"));
+                candle.put("volume", parseBarLong(bar,   "5. volume"));
+                candles.add(candle);
+            });
+            return candles;
+        } catch (Exception e) {
+            return Collections.emptyList();
+        }
     }
 
-    private double parseDoublePercent(String s) {
-        try { return Double.parseDouble(s.replace("%", "").trim()); } catch (Exception e) { return 0.0; }
+    // ── Daily OHLCV — for 1W / 1M / 1Y / ALL chart ───────────────────────────
+
+    public List<Map<String, Object>> getDailyOHLCV(String symbol) {
+        try {
+            String url = BASE
+                    + "?function=TIME_SERIES_DAILY"
+                    + "&symbol="    + symbol
+                    + "&outputsize=full"
+                    + "&apikey="    + apiKey;
+
+            Map<?, ?> resp = restTemplate.getForObject(url, Map.class);
+            if (resp == null) return Collections.emptyList();
+
+            Map<?, ?> series = (Map<?, ?>) resp.get("Time Series (Daily)");
+            if (series == null || series.isEmpty()) return Collections.emptyList();
+
+            List<Map<String, Object>> candles = new ArrayList<>();
+            DateTimeFormatter fmt = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+
+            new TreeMap<>(series).forEach((dateStr, val) -> {
+                Map<?, ?> bar = (Map<?, ?>) val;
+                long time = LocalDate.parse(String.valueOf(dateStr), fmt)
+                        .atStartOfDay()
+                        .toEpochSecond(ZoneOffset.UTC);
+                Map<String, Object> candle = new LinkedHashMap<>();
+                candle.put("time",   time);
+                candle.put("open",   parseBarDouble(bar, "1. open"));
+                candle.put("high",   parseBarDouble(bar, "2. high"));
+                candle.put("low",    parseBarDouble(bar, "3. low"));
+                candle.put("close",  parseBarDouble(bar, "4. close"));
+                candle.put("volume", parseBarLong(bar,   "5. volume"));
+                candles.add(candle);
+            });
+            return candles;
+        } catch (Exception e) {
+            return Collections.emptyList();
+        }
     }
 
-    private long parseLong(String s) {
-        try { return Long.parseLong(s.trim()); } catch (Exception e) { return 0L; }
+    // ── Legacy raw daily history ──────────────────────────────────────────────
+
+    public Map<String, Object> getDailyHistory(String symbol) {
+        try {
+            String url = BASE
+                    + "?function=TIME_SERIES_DAILY"
+                    + "&symbol="    + symbol
+                    + "&outputsize=compact"
+                    + "&apikey="    + apiKey;
+            Map<?, ?> resp = restTemplate.getForObject(url, Map.class);
+            if (resp == null) return Collections.emptyMap();
+            Map<String, Object> result = new LinkedHashMap<>();
+            resp.forEach((k, v) -> result.put(String.valueOf(k), v));
+            return result;
+        } catch (Exception e) {
+            return Collections.emptyMap();
+        }
     }
 
-    // ── Mocks (used when API is rate-limited or unreachable) ──────────────────
+    // ── Mock fallbacks ────────────────────────────────────────────────────────
 
     private Map<String, Object> mockQuote(String symbol) {
-        double price = 100 + (Math.abs(symbol.hashCode()) % 900);
-        Map<String, Object> result = new LinkedHashMap<>();
-        result.put("symbol",          symbol);
-        result.put("price",           price);
-        result.put("open",            price - 2);
-        result.put("high",            price + 5);
-        result.put("low",             price - 8);
-        result.put("previousClose",   price - 1.5);
-        result.put("change",          1.5);
-        result.put("changePercent",   1.5);
-        result.put("volume",          1000000L);
-        result.put("latestTradingDay","2025-04-30");
-        result.put("analystBuy",      65);
-        result.put("analystHold",     25);
-        result.put("analystSell",     10);
-        return result;
+        int    hash  = Math.abs(symbol.hashCode());
+        double price = 100 + (hash % 4900);
+        double chg   = (hash % 10) - 5.0;
+        Map<String, Object> m = new LinkedHashMap<>();
+        m.put("symbol",        symbol);
+        m.put("price",         round(price));
+        m.put("open",          round(price * 0.99));
+        m.put("high",          round(price * 1.01));
+        m.put("low",           round(price * 0.98));
+        m.put("change",        round(chg));
+        m.put("changePercent", round(chg / price * 100));
+        m.put("volume",        (long)(hash % 5_000_000 + 100_000));
+        return m;
     }
 
     private Map<String, Object> mockOverview(String symbol) {
-        double price = 100 + (Math.abs(symbol.hashCode()) % 900);
-        Map<String, Object> result = new LinkedHashMap<>();
-        result.put("Symbol",               symbol);
-        result.put("Name",                 symbol.replace(".BSE", "").replace(".NSE", "") + " Ltd.");
-        result.put("Exchange",             symbol.endsWith(".BSE") ? "BSE" : "NASDAQ");
-        result.put("Sector",               "Technology");
-        result.put("Industry",             "Software—Application");
-        result.put("Description",          "A leading company in its sector with a strong track record of growth and innovation.");
-        result.put("MarketCapitalization", String.valueOf((long)(price * 1_000_000)));
-        result.put("PERatio",              String.valueOf(20 + (Math.abs(symbol.hashCode()) % 15)));
-        result.put("EPS",                  String.valueOf(Math.round(price / 25.0 * 100) / 100.0));
-        result.put("DividendYield",        "0.012");
-        result.put("52WeekHigh",           String.valueOf(Math.round(price * 1.3 * 100) / 100.0));
-        result.put("52WeekLow",            String.valueOf(Math.round(price * 0.7 * 100) / 100.0));
-        return result;
+        String clean = symbol.replace(".BSE", "").replace(".NSE", "");
+        Map<String, Object> m = new LinkedHashMap<>();
+        m.put("Symbol",               clean);
+        m.put("Name",                 clean + " Ltd.");
+        m.put("Exchange",             "BSE");
+        m.put("Sector",               "Technology");
+        m.put("Industry",             "Software—Application");
+        m.put("Description",          "A leading company in its sector with a strong track record of innovation and growth.");
+        m.put("MarketCapitalization", "184000000");
+        m.put("PERatio",              "29.00");
+        m.put("EPS",                  "7.36");
+        m.put("DividendYield",        "0.012");
+        m.put("52WeekHigh",           "239.20");
+        m.put("52WeekLow",            "128.80");
+        return m;
     }
 
-    private List<Map<String, Object>> mockCandles() {
-        List<Map<String, Object>> candles = new ArrayList<>();
-        double base = 2700;
-        for (int i = 30; i >= 0; i--) {
-            double open  = base + (Math.random() - 0.5) * 60;
-            double close = open + (Math.random() - 0.48) * 50;
-            double high  = Math.max(open, close) + Math.random() * 30;
-            double low   = Math.min(open, close) - Math.random() * 30;
-            candles.add(Map.of(
-                "date",   "2025-" + String.format("%02d", (i % 12) + 1) + "-01",
-                "open",   Math.round(open  * 100) / 100.0,
-                "high",   Math.round(high  * 100) / 100.0,
-                "low",    Math.round(low   * 100) / 100.0,
-                "close",  Math.round(close * 100) / 100.0,
-                "volume", (long)(Math.random() * 5000000 + 1000000)
-            ));
-            base = close;
-        }
-        return candles;
+    // ── Type-safe helpers ─────────────────────────────────────────────────────
+
+    /**
+     * Safe string extraction from Map<?,?> — avoids getOrDefault type errors.
+     * Uses explicit null check + String.valueOf instead of getOrDefault.
+     */
+    private String str(Map<?, ?> m, String key, String defaultVal) {
+        Object v = m.get(key);
+        return v != null ? String.valueOf(v) : defaultVal;
+    }
+
+    /**
+     * Parse a double from Map<?,?> by key. Returns 0.0 on any failure.
+     */
+    private double parseDouble(Map<?, ?> m, String key) {
+        try {
+            return Double.parseDouble(str(m, key, "0").replace("%", "").trim());
+        } catch (Exception e) { return 0.0; }
+    }
+
+    /**
+     * Parse a long from Map<?,?> by key. Returns 0 on any failure.
+     */
+    private long parseLong(Map<?, ?> m, String key) {
+        try {
+            return Long.parseLong(str(m, key, "0").trim());
+        } catch (Exception e) { return 0L; }
+    }
+
+    private double parseChangePct(Map<?, ?> m) {
+        try {
+            return Double.parseDouble(
+                    str(m, "10. change percent", "0%").replace("%", "").trim());
+        } catch (Exception e) { return 0.0; }
+    }
+
+    private double parseBarDouble(Map<?, ?> bar, String key) {
+        try {
+            return Double.parseDouble(str(bar, key, "0").trim());
+        } catch (Exception e) { return 0.0; }
+    }
+
+    private long parseBarLong(Map<?, ?> bar, String key) {
+        try {
+            return Long.parseLong(str(bar, key, "0").trim());
+        } catch (Exception e) { return 0L; }
+    }
+
+    private double round(double v) {
+        return Math.round(v * 100.0) / 100.0;
     }
 }
